Le projecteur decode pour de vrai, et la liste blanche s'ouvre
LE MESSAGE QUI INDUISAIT EN ERREUR. Le journal disait « FFmpeg
(bytedeco) -> refus du joueur », et l'utilisateur l'a lu comme « ffmpeg
absent ». Deux fautes en trois mots : « refus » decrivait un geste que
personne n'avait fait — le defaut est a non, et ne pas y avoir touche
n'est pas refuser — et rien ne disait ou aller. Desormais
« consentement non donne — bouton Medias distants dans l'ecran du bloc ».

LA LISTE BLANCHE S'OUVRE, sur decision de l'administrateur. Tout lien
public est accepte ; la liste, la commande et l'interrupteur restent pour
qui voudra refermer.

Deux choses ne s'ouvrent pas, et le commentaire de configuration le dit
sur place. Les adresses privees restent refusees inconditionnellement :
un administrateur peut ouvrir SON serveur a l'internet, il ne peut pas
ouvrir le reseau domestique de ses joueurs. Et le refus d'un joueur
prime sur tout — le bouton est maintenant grand, dans l'ecran du bloc, et
son infobulle dit la consequence : « c'est TON client qui va chercher la
video, pas le serveur ; l'hebergeur verra donc ton adresse IP ».

LA QUALITE. Auto / 360p / 720p / 1080p / source, reglee PAR ECRAN et PAR
CLIENT, la plus basse des deux l'emportant. Un joueur sur une vieille
machine se plafonne sans que l'administrateur tranche pour lui, et sans
degrader personne d'autre. L'arithmetique qui justifie tout le reglage :
360p, c'est NEUF FOIS moins de pixels que 1080p, la ou tous les autres
leviers sont lineaires.

LE DECODEUR EST BRANCHE, ET LA MOITIE EST PROUVEE.

  liaisons javacpp + ffmpeg      832 Kio   dans le jar, Java pur
  binaires par plateforme       ~31 Mio    telecharges au premier usage

Embarquer les six plateformes aurait fait cent quatre-vingts mebioctets
pour un mod dont l'identite est la legerete.

Aucun chargeur de classes maison, et cela a ete decide par l'experience
et non par l'argument : tools/EssaiLav.java tourne HORS de Minecraft et
etablit que preloadpath trouve